welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {if (talking && (n<7 || n > 20)) {true} else {false}